// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render Expenses Summary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
  <Link
    replace={false}
    to="/create"
  >
    Add expense
  </Link>
</div>
`;

exports[`Should correctly render Expenses Summary with multipule expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $324,234.32
  </h1>
  <Link
    replace={false}
    to="/create"
  >
    Add expense
  </Link>
</div>
`;
